2013-01-03  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Slightly redesign layout to display all options.

	Also some other, minor changes.

	* src/ftdiff.c: Include <string.h>.
	(RenderStateRec): Remove `message' and `message0'.
	Update all users.
	(render_state_draw): Display one more line for status information.
	(write_message): Renamed to...
	(write_global_info): This.
	Also display family and style name; we thus no longer need to
	display the number of subfonts.
	Also display dpi, ppem, and gamma.
	(main): Slightly improve column layout.

	(event_help): Minor improvement.
	(adisplay_change_gamma): Use epsilons.
	(render_state_set_file): Don't loop around the start or end of the
	face list.  Other FreeType demo programs don't do this either.

2013-01-03  Werner Lemberg  <wl@gnu.org>

	[ftdiff] Store family and style name of loaded fonts.

	To be used in a following commit.

	* src/ftdiff.c (FontFaceRec): New members `family_name' and
	`style_name'.
	(render_state_set_files): Fill new FontFaceRec members.

2013-01-03  Werner Lemberg  <wl@gnu.org>

	* src/ftdiff (event_help): Improve text.

2013-01-03  Werner Lemberg  <wl@gnu.org>

	[ftgrid] Make it work again.

	* src/ftgrid.c (grid_status_init): Don't initialize variables
	related to `display'.  Do this...
	(grid_status_display): ... in this new function instead.
	(main): Use new function to handle command line arguments before
	initializing the display.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	Increase line height in help texts.

	* src/ftview.c (event_help): Increase line height.
	Improve text.
	* src/ftdiff.c (event_help), src/ftgrid.c (event_help),
	src/ftmulti.c (Help), src/ftstring.c (event_help): Increase line
	height.

2013-01-02  Werner Lemberg  <wl@gnu.org>

	[graph] Implement adjustable line height.

	* graph/grfont.c (gr_line_height): New global variable.
	(grSetLineHeight): New function.
	(grWrite): Use gr_line_height.

	* graph/grfont.h: Updated.

2013-01-02  Werner Lemberg  <wl@gnu.org>
